# StarDuck

./: LICENSE  README.md
.github/workflows/: publish.yml  rust.yml
starduck/: Cargo.toml
starduck/src/: lib.rs
starduck/src/adaptation/: addition.rs  directives.rs  doctrine.rs  mechanisms.rs  mod.rs  modifiers.rs  query.rs  reconfig.rs  restart.rs
starduck/src/apps/: application.rs  application_status.rs  mod.rs  status.rs
starduck/src/components/: component.rs  component_error.rs  component_types.rs  data_requirement.rs  iot_output.rs  mod.rs  output.rs  properties.rs
starduck/src/locations/: location.rs  location_error.rs  mod.rs
starduck/src/message/: mod.rs  sc_message.rs
starduck/src/messages/: callback_message.rs  exec_message.rs  mod.rs  sc_message.rs
starduck/src/traits/: mod.rs  offset.rs  update_state.rs
starduck/src/utils/: env_handler.rs  env_keys.rs  file_handler.rs  mod.rs
