[package]
name = "starduck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
env_logger = "0.10.0"

serde = { version = "1.0.173", features = ["derive", "rc"] }
serde_yaml = "0.9.24"
serde_json = "1.0.104"

thiserror = "1.0.44"

chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.6.1", features = ["serde"] }
anyhow = "1.0.75"
