[package]
name = "starduck"
version = "0.1.19"
edition = "2021"
description = "StarDuck is the main library named after the project code name. It houses the model for Smart Campus UIS apps."
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
env_logger = "0.10.0"

serde = { version = "1.0.173", features = ["derive", "rc"] }
serde_with = { version = "3.4", features = ["chrono_0_4", "chrono"] }
serde_json = "1.0.104"

thiserror = "1.0.44"
uuid = { version = "1.6.1", features = ["serde"] }
anyhow = "1.0.75"
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
project-root = "0.2.2"
http = "1.0.0"
http-serde = "2.0.0"
